--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, target-densitydpi=medium-dpi" />
 	<meta charset="UTF-8">
 	<title>전소연 마이크 살려</title>
+<link rel="shortcut icon" href="mic.ico"/>
 </head>
 <body>
 	
